--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
       "path": "node_modules/cz-emoji-conventional"
     }
   },
-  "dependencies": {
-    "tslib": "^2.3.1"
-  },
+  "dependencies": {},
   "optionalDependencies": {},
   "devDependencies": {
     "@washingtondc/development": "^1.0.2",
