--- a/common/.config/taskfiles/lint/Taskfile.yml
+++ b/common/.config/taskfiles/lint/Taskfile.yml
@@ -3,7 +3,7 @@ version: '3'
 
 vars:
   ANSIBLE_LINT_CONFIG: .config/ansible-lint.yml
-  COMMITLINT_CONFIG: ./.config/commitlintrc.cjs
+  COMMITLINT_CONFIG: ./.config/commitlint.config.cjs
   CSPELL_CONFIG: .config/cspell.json
   FLAKE8_CONFIG: .config/flake8.toml
   PRETTIERIGNORE_CONFIG: .config/prettierignore
