--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
       "path": "node_modules/cz-emoji-conventional"
     }
   },
-  "dependencies": {},
-  "optionalDependencies": {},
+  "dependencies": {
+    "@commitlint/config-conventional": "^15.0.0",
+    "cz-emoji-conventional": "^1.0.1",
+    "lint-staged": "^12.1.2"
+  },
   "devDependencies": {
     "@washingtondc/development": "^1.0.2",
     "@washingtondc/prettier": "^1.0.0",
