--- a/.config/taskfiles/lint/Taskfile.yml
+++ b/.config/taskfiles/lint/Taskfile.yml
@@ -3,7 +3,7 @@ version: '3'
 
 vars:
   ANSIBLE_LINT_CONFIG: .config/ansible-lint.yml
-  COMMITLINT_CONFIG: ./.config/commitlintrc.cjs
+  COMMITLINT_CONFIG: ./.config/commitlint.config.cjs
   CSPELL_CONFIG: .config/cspell.json
   FLAKE8_CONFIG: .config/flake8.toml
   PRETTIERIGNORE_CONFIG: .config/prettierignore
@@ -55,12 +55,12 @@ tasks:
       `task lint:commit -- 'My commit message'`
     cmds:
       - |
-        if [ ! -z '{{.CLI_ARGS}}' ] && [ '{{.CLI_ARGS}}' != 'MERGE_MSG' ]; then
+        if [ ! -z '{{.CLI_ARGS}}' ] && [ '{{.CLI_ARGS}}' != '.git/MERGE_MSG' ]; then
           cp '{{.CLI_ARGS}}' '{{.CLI_ARGS}}.bak'
           TMP="$(mktemp)"
           COMMIT_MSG_NOEMOJI="$(sed 's/^..//' < '{{.CLI_ARGS}}')"
           echo "$COMMIT_MSG_NOEMOJI" | {{.NPX_PACKAGE}} commitlint --config {{.COMMITLINT_CONFIG}}
-        elif [ '{{.CLI_ARGS}}' == 'MERGE_MSG' ]; then
+        elif [ '{{.CLI_ARGS}}' == '.git/MERGE_MSG' ]; then
           . .config/log info 'Bypassing commitlint since the message is a merge message'
         fi
     status:
