--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "common-shared"
 version = "0.0.1"
-description = "Includes common files used across different types of common file repositories (e.g. Go, Python, etc.)"
+description = "Includes common files used across different types of common file repositories (e.g. Go, Python, TypeScript, Go, more..)"
 authors = ["Brian Zalewski <brian@megabyte.space>"]
 license = "MIT"
 readme = "README.md"
