--- a/common/.gitlab/ci/test/ansible/playbook.macos.gitlab-ci.yml
+++ b/common/.gitlab/ci/test/ansible/playbook.macos.gitlab-ci.yml
@@ -1,7 +1,9 @@
 ---
 test:molecule:darwin:
   allow_failure: true
-  image: megabytelabs/molecule:latest
+  image: macos-10.15-xcode-11
+  tags:
+    - shared-macos-amd64
   rules:
     - if: $DO_CI == 'false'
       when: never
@@ -10,7 +12,6 @@ test:molecule:darwin:
     - changes:
         - main.yml
     - if: $CI_PIPELINE_SOURCE == 'schedule' || $CI_PIPELINE_SOURCE == 'web'
-    - if: $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == 'master'
   script:
     - set -eo pipefail
   services:
