--- a/.config/taskfiles/git/Taskfile.yml
+++ b/.config/taskfiles/git/Taskfile.yml
@@ -186,6 +186,8 @@ tasks:
           glab api projects/:fullpath/protected_branches/master -X DELETE
           glab api projects/:fullpath/protected_branches -X POST -f name=master -f code_owner_approval_required=true > /dev/null
         fi
+      - glab api projects/:fullpath/protected_branches -X POST -f name=main -f code_owner_approval_required=true > /dev/null
+      - glab api projects/:fullpath/protected_branches -X POST -f name=next -f code_owner_approval_required=true > /dev/null
       - glab api projects/:fullpath/protected_branches -X POST -f name=protected-* -f code_owner_approval_required=true > /dev/null
       - glab api projects/:fullpath/protected_branches -X POST -f name=synchronize -f code_owner_approval_required=true > /dev/null
       - . .config/log info "Set up protected branches"
@@ -243,8 +245,8 @@ tasks:
   gitlab:integrations:
     deps:
       - gitlab:integrations:github
-
     run: once
+
   gitlab:integrations:github:
     deps:
       - :install:software:glab
@@ -271,8 +273,8 @@ tasks:
         sh: glab api projects/:fullpath/remote_mirrors | jq '. | length'
     cmds:
       - >
-        if [ ! -z "$GITLAB_TOKEN" ] && [ ! -z "$GITHUB_TOKEN" ]; then
-          if [[ "{{.PUSH_MIRROR_COUNT}}" == '0' ]]; then
+        if [ -n "$GITLAB_TOKEN" ] && [ -n "$GITHUB_TOKEN" ]; then
+          if [ "{{.PUSH_MIRROR_COUNT}}" == '0' ]; then
             glab api projects/:fullpath/remote_mirrors --method POST --header "Content-Type: application/json" \
               -f "url=https://{{.GITHUB_USER}}:$GITHUB_TOKEN@github.com/{{.GITHUB_ORG}}/{{.GITHUB_SLUG}}.git" \
               -f 'enabled=true' > /dev/null
