--- a/.config/taskfiles/install/Taskfile.yml
+++ b/.config/taskfiles/install/Taskfile.yml
@@ -50,6 +50,7 @@ tasks:
   modules:local:sync:
     cmds:
       - |
+        chmod +x .config/log
         for PATTERN in {{.NPM_KEEP_UPDATED}}; do
           find ./node_modules/$PATTERN -maxdepth 0 | while read PATHH; do
             if [ -f "$PATHH/package.json" ]; then
