--- a/package.json
+++ b/package.json
@@ -26,11 +26,7 @@
       "path": "node_modules/cz-emoji-conventional"
     }
   },
-  "dependencies": {
-    "@commitlint/config-conventional": "^15.0.0",
-    "cz-emoji-conventional": "^1.0.1",
-    "lint-staged": "^12.1.2"
-  },
+  "dependencies": {},
   "optionalDependencies": {},
   "devDependencies": {
     "@washingtondc/development": "^1.0.2",
