--- a/common/.config/taskfiles/git/Taskfile.yml
+++ b/common/.config/taskfiles/git/Taskfile.yml
@@ -179,6 +179,9 @@ tasks:
   gitlab:branches:
     deps:
       - :install:software:glab
+    vars:
+      REPO_ID:
+        sh: glab api projects/:fullpath | jq '.id'
     run: once
     cmds:
       - |
@@ -186,9 +189,12 @@ tasks:
           glab api projects/:fullpath/protected_branches/master -X DELETE
           glab api projects/:fullpath/protected_branches -X POST -f name=master -f code_owner_approval_required=true > /dev/null
         fi
+      - glab api projects/:fullpath/repository/branches -X POST -f id={{.REPO_ID}} -f branch=main -f ref=master
       - glab api projects/:fullpath/protected_branches -X POST -f name=main -f code_owner_approval_required=true > /dev/null
+      - glab api projects/:fullpath/repository/branches -X POST -f id={{.REPO_ID}} -f branch=next -f ref=master
       - glab api projects/:fullpath/protected_branches -X POST -f name=next -f code_owner_approval_required=true > /dev/null
       - glab api projects/:fullpath/protected_branches -X POST -f name=protected-* -f code_owner_approval_required=true > /dev/null
+      - glab api projects/:fullpath/repository/branches -X POST -f id={{.REPO_ID}} -f branch=synchronize -f ref=master
       - glab api projects/:fullpath/protected_branches -X POST -f name=synchronize -f code_owner_approval_required=true > /dev/null
       - .config/log info "Set up protected branches"
 
