--- a/.config/taskfiles/git/Taskfile.yml
+++ b/.config/taskfiles/git/Taskfile.yml
@@ -5,26 +5,30 @@ version: '3'
 vars:
   EMOJI_END:
     sh: |
-      BP_END="$(jq -r '.blueprint.emoji_end' package.json)"
-      if [ "$BP_START" != 'null' ]; then
-        echo "$BP_START"
-      else
-        if [ "$(jq -r '.emoji_endings[15]' .variables.json)" != 'null' ]; then
-          echo "$(jq --arg place "$(shuf -i 0-15 -n 1)" -r '.emoji_endings[($place | tonumber)]' .variables.json)"
+      if [ -f '.variables.json' ]; then
+        BP_END="$(jq -r '.blueprint.emoji_end' .variables.json)"
+        if [ "$BP_START" != 'null' ]; then
+          echo "$BP_START"
         else
-          echo ""
+          if [ "$(jq -r '.emoji_endings[15]' .variables.json)" != 'null' ]; then
+            echo "$(jq --arg place "$(shuf -i 0-15 -n 1)" -r '.emoji_endings[($place | tonumber)]' .variables.json)"
+          else
+            echo ""
+          fi
         fi
       fi
   EMOJI_START:
     sh: |
-      BP_START="$(jq -r '.blueprint.emoji_start' package.json)"
-      if [ "$BP_START" != 'null' ]; then
-        echo "$BP_START"
-      else
-        if [ "$(jq -r '.emoji_beginnings[15]' .variables.json)" != 'null' ]; then
-          echo "$(jq --arg place "$(shuf -i 0-15 -n 1)" -r '.emoji_beginnings[($place | tonumber)]' .variables.json)"
+      if [ -f '.variables.json' ]; then
+        BP_START="$(jq -r '.blueprint.emoji_start' .variables.json)"
+        if [ "$BP_START" != 'null' ]; then
+          echo "$BP_START"
         else
-          echo ""
+          if [ "$(jq -r '.emoji_beginnings[15]' .variables.json)" != 'null' ]; then
+            echo "$(jq --arg place "$(shuf -i 0-15 -n 1)" -r '.emoji_beginnings[($place | tonumber)]' .variables.json)"
+          else
+            echo ""
+          fi
         fi
       fi
   GITHUB_ISSUES: true
@@ -281,6 +285,9 @@ tasks:
           if [ "{{.PUSH_MIRROR_COUNT}}" == '0' ]; then
             glab api projects/:fullpath/remote_mirrors --method POST --header "Content-Type: application/json" \
               -f "url=https://{{.GITHUB_USER}}:$GITHUB_TOKEN@github.com/{{.GITHUB_ORG}}/{{.GITHUB_SLUG}}.git" \
+              -f 'enabled=true' > /dev/null
+            glab api projects/:fullpath/remote_mirrors --method POST --header "Content-Type: application/json" \
+              -f "url=https://root:$GITHUB_TOKEN@github.com/{{.GITHUB_ORG}}/{{.GITHUB_SLUG}}.git" \
               -f 'enabled=true' > /dev/null
           fi
           curl -s -H 'Content-Type: application/json' -H "Authorization: Bearer $GITLAB_TOKEN" -X PUT --data \
