--- a/.gitlab/ci/update/common.gitlab-ci.yml
+++ b/.gitlab/ci/update/common.gitlab-ci.yml
@@ -22,4 +22,6 @@ update:common:
     - task ci:before
   script:
     - task start
+    - if [ "$UPDATE_SERVICES" == 'true' ]; then task services; fi
     - task ci:commit
+    - task ci:synchronize
