--- a/.config/taskfiles/ansible/Taskfile-test.yml
+++ b/.config/taskfiles/ansible/Taskfile-test.yml
@@ -23,7 +23,8 @@ tasks:
       - cp test/{{OS}}/inventory inventory
       - if [ ! -f ansible.cfg.bak ]; then cp ansible.cfg ansible.cfg.bak; fi
       - cp test/{{OS}}/ansible.cfg ansible.cfg
-      - ansible-playbook --ask-sudo-pass test/{{OS}}/test.yml
+      - |
+        {{.PYTHON_HANDLE}}ansible-playbook --ask-sudo-pass test/{{OS}}/test.yml
       - mv ansible.cfg.bak ansible.cfg
       - rm inventory
 
@@ -53,7 +54,7 @@ tasks:
         if grep -Ril 'community.general.snap:' ./tasks; then
           SCENARIO="docker-snap"
         fi
-        molecule test -s "$SCENARIO"
+        {{.PYTHON_HANDLE}}molecule test -s "$SCENARIO"
 
   molecule:docker:matrix:
     deps:
@@ -70,7 +71,7 @@ tasks:
         if grep -Ril 'community.general.snap:' ./tasks; then
           SCENARIO="docker-snap"
         fi
-        PY_COLORS=0 molecule test -s "$SCENARIO" 2>&1 | tee "molecule/.results/{{.MOLECULE_DATE}}-$SCENARIO.txt"
+        PY_COLORS=0 {{.PYTHON_HANDLE}}molecule test -s "$SCENARIO" 2>&1 | tee "molecule/.results/{{.MOLECULE_DATE}}-$SCENARIO.txt"
 
   molecule:virtualbox:
     deps:
@@ -96,7 +97,8 @@ tasks:
       # yamllint disable-line rule:truthy
       OBJC_DISABLE_INITIALIZE_FORK_SAFETY: YES
     cmds:
-      - molecule test
+      - |
+        {{.PYTHON_HANDLE}}molecule test
 
   molecule:virtualbox:converge:
     deps:
@@ -138,7 +140,7 @@ tasks:
       - |
         SCENARIO='{{.CLI_ARGS}}-desktop'
         if test -d "molecule/$SCENARIO"; then
-          molecule converge -s "$SCENARIO"
+          {{.PYTHON_HANDLE}}molecule converge -s "$SCENARIO"
         else
           .config/log error "The `$SCENARIO` scenario is not present in the `molecule/` folder"
         fi
@@ -161,7 +163,7 @@ tasks:
         sh: date '+%Y-%m-%d'
     cmds:
       - mkdir -p molecule/.results
-      - PY_COLORS=0 molecule test | tee 'molecule/.results/{{.MOLECULE_DATE}}-default.txt'
+      - PY_COLORS=0 {{.PYTHON_HANDLE}}molecule test | tee 'molecule/.results/{{.MOLECULE_DATE}}-default.txt'
 
   vagrant:
     deps:
