Fixing PATH envs.

--- a/.config/taskfiles/upstream/Taskfile-commondocs.yml
+++ b/.config/taskfiles/upstream/Taskfile-commondocs.yml
@@ -16,8 +16,7 @@ tasks:
 
   copy:
     env:
-      PATH:
-        sh: "$(brew --prefix)/opt/coreutils/libexec/gnubin:$PATH"
+      PATH: "$(brew --prefix)/opt/coreutils/libexec/gnubin:$PATH"
     cmds:
       - cp -rT ./{{.COMMON_FOLDER}}/common/ .
       - task: :common:husky:permissions
