--- a/.config/taskfiles/upstream/Taskfile-project.yml
+++ b/.config/taskfiles/upstream/Taskfile-project.yml
@@ -8,7 +8,8 @@ vars:
 tasks:
   boilerplate:
     env:
-      PATH: "$(brew --prefix)/opt/coreutils/libexec/gnubin:$PATH"
+      PATH:
+        sh: echo "$(brew --prefix)/opt/coreutils/libexec/gnubin:$PATH"
     cmds:
       - |
         if [ "$(jq -r '.blueprint.boilerplate' package.json)" == 'true' ]; then
@@ -42,7 +43,8 @@ tasks:
 
   copy:
     env:
-      PATH: "$(brew --prefix)/opt/coreutils/libexec/gnubin:$PATH"
+      PATH:
+        sh: echo "$(brew --prefix)/opt/coreutils/libexec/gnubin:$PATH"
     cmds:
       - cp -rT {{.SHARED_FOLDER}}/_generated_/common .
       - cp -rT {{.SHARED_FOLDER}}/_generated_/{{.REPOSITORY_SUBTYPE}} .
