--- a/common/.config/taskfiles/upstream/Taskfile-docs.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-docs.yml
@@ -43,7 +43,8 @@ tasks:
 
   copy:common:
     env:
-      PATH: "$(brew --prefix)/opt/coreutils/libexec/gnubin:$PATH"
+      PATH:
+        sh: echo "$(brew --prefix)/opt/coreutils/libexec/gnubin:$PATH"
     cmds:
       - cp -rT ./{{.COMMON_FOLDER}}/common/ .
       - task: :common:husky:permissions
